--- a/HubPilots/HubPilots/Base.lproj/Main.storyboard
+++ b/HubPilots/HubPilots/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="6VU-Aa-kbQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="HLR-Zi-GDB">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -21,25 +21,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="572" y="-99"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="5Cs-Dl-fiw">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6VU-Aa-kbQ" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Zhi-Nb-hAJ">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="DR3-QM-QSB"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="LWk-1T-C4k" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="81" y="-91"/>
+            <point key="canvasLocation" x="89" y="-91"/>
         </scene>
         <!--Reveal View Controller-->
         <scene sceneID="mg9-vg-0om">
@@ -54,6 +36,10 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegue" id="lOm-ph-Mhl"/>
+                        <segue destination="hNS-gY-ith" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegue" id="CTc-gh-1qA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YAD-jI-AqU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -70,12 +56,89 @@
                     <view key="view" contentMode="scaleToFill" id="RGB-Wu-Q7D">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="31w-yr-DAH">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MenuItemCell" id="zy4-MI-8bo">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zy4-MI-8bo" id="hKE-Ou-ZDT">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="31w-yr-DAH" id="Zty-fH-sji"/>
+                        <segue destination="Udt-ol-fln" kind="custom" identifier="GoToStatsSegue" customClass="SWRevealViewControllerSegue" id="hIg-Qk-7eh"/>
+                        <segue destination="vXZ-lx-hvc" kind="custom" identifier="GoToQuestionSegue" customClass="SWRevealViewControllerSegue" id="suL-x0-eT0"/>
+                        <segue destination="rgF-1O-LLO" kind="custom" identifier="GoToRemoveAdsSegue" customClass="SWRevealViewControllerSegue" id="bdg-y9-R6b"/>
+                        <segue destination="ehA-DE-pNA" kind="custom" identifier="GoToAboutSegue" customClass="SWRevealViewControllerSegue" id="dh2-vL-9IQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BuZ-UR-Dfl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="89" y="655"/>
+        </scene>
+        <!--Stats View Controller-->
+        <scene sceneID="3eG-jP-EmP">
+            <objects>
+                <viewController id="Udt-ol-fln" customClass="StatsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ClD-Dk-H6T"/>
+                        <viewControllerLayoutGuide type="bottom" id="Y4z-nS-iUh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ygZ-wS-pEg">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" red="0.85032684950000004" green="0.83485378200000004" blue="0.742769758" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9z7-d6-YmD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="572" y="660"/>
+        </scene>
+        <!--About View Controller-->
+        <scene sceneID="FvP-40-0Tl">
+            <objects>
+                <viewController id="ehA-DE-pNA" customClass="AboutViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="t6a-TQ-TEG"/>
+                        <viewControllerLayoutGuide type="bottom" id="NsJ-Ll-Pnb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2w4-nU-Hk9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" red="0.56470588239999997" green="0.75294117650000003" blue="0.85490196080000003" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tzs-Rd-mpz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1046" y="660"/>
+        </scene>
+        <!--Remove Ads View Controller-->
+        <scene sceneID="A5L-Km-Rbx">
+            <objects>
+                <viewController id="rgF-1O-LLO" customClass="RemoveAdsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YwU-cv-AVZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="lQD-4K-3En"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pSB-St-c0O">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" red="0.0" green="0.84155451640000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="taN-gF-qvL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="572" y="-91"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
@@ -83,4 +146,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="suL-x0-eT0"/>
+    </inferredMetricsTieBreakers>
 </document>
