--- a/HubPilots/HubPilots/Base.lproj/Main.storyboard
+++ b/HubPilots/HubPilots/Base.lproj/Main.storyboard
@@ -20,8 +20,27 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gk2-QL-38H">
+                                        <rect key="frame" x="0.0" y="64" width="320" height="22"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <subviews>
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Múltipla Escolha" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1KI-Bc-BgR">
+                                                <rect key="frame" x="121" y="0.0" width="78" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MAw-Mm-SL3">
+                                        <rect key="frame" x="0.0" y="225" width="320" height="535"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="ctp-uo-hCo">
-                                        <rect key="frame" x="20" y="101" width="280" height="87"/>
+                                        <rect key="frame" x="20" y="116" width="280" height="72"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -100,7 +119,7 @@
                                         </items>
                                     </navigationBar>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Questão" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5w5-3x-Ny5">
-                                        <rect key="frame" x="20" y="72" width="65" height="21"/>
+                                        <rect key="frame" x="20" y="87" width="65" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="calibratedRGB"/>
@@ -120,6 +139,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Pjy-O6-aFS"/>
                     <connections>
+                        <outlet property="answerBackgroundView" destination="MAw-Mm-SL3" id="v9v-q6-VrX"/>
                         <outlet property="answerHeaderLabel" destination="kW6-ke-Vzr" id="lHn-eZ-nWg"/>
                         <outlet property="questionHeaderLabel" destination="5w5-3x-Ny5" id="hXs-Rn-hh3"/>
                         <outlet property="questionMCAnswer1" destination="2SP-Qy-cUL" id="Wfl-Iu-aRi"/>
@@ -127,6 +147,8 @@
                         <outlet property="questionMCAnswer3" destination="w4m-oc-1gw" id="5dM-Q0-8Yc"/>
                         <outlet property="questionMCAnswer4" destination="Q22-n0-ipm" id="CJV-Qx-okf"/>
                         <outlet property="questionScrollView" destination="MrN-R4-8XT" id="sYr-lC-qv5"/>
+                        <outlet property="questionStatusBackgroundView" destination="Gk2-QL-38H" id="PLz-7O-9Wg"/>
+                        <outlet property="questionStatusLabel" destination="1KI-Bc-BgR" id="Rvf-DN-gEC"/>
                         <outlet property="questionText" destination="ctp-uo-hCo" id="4My-xa-GuM"/>
                         <outlet property="skipButton" destination="aLL-oL-KNP" id="8sR-gS-5vA"/>
                     </connections>
